--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,109 @@
-Flask==1.0.2
-
-# Application server for both development and production.
-gunicorn==19.9.0
-
-# Testing and static analysis.
-pytest==4.3.0
-
-# CLI.
-Click==7.0
-
-# Data and workers.
-psycopg2==2.7.7
-psycopg2-binary==2.8.2
-Flask-SQLAlchemy==2.3.2
-redis==3.2.0
-# celery-once==2.1.0
-# celery-singleton==0.1.3
-# celery-redbeat==0.13.0
-amqp==2.4.1
+ago==0.0.93
+alembic==1.1.0
+amqp==2.6.1
+appdirs==1.4.4
+atomicwrites==1.4.0
+attrs==19.1.0
+billiard==3.5.0.5
+blinker==1.4
 celery==4.2.1
-rabbitmq==0.2.0
-flask-cors==3.0.8
-
-# Forms.
-Flask-WTF==0.9.5
-WTForms-Components==0.10.3
-wtforms-alchemy==0.16.8
-flask-paginate==0.5.2
-
-# Payments.
-stripe==2.42.0
-
-# Utils.
-tzlocal==1.5.1
-python-dateutil==2.8.0
-# numpy==1.8.0
-flask-compress==1.4.0
+certifi==2019.6.16
+cffi==1.14.3
+chardet==3.0.4
+Click==7.0
+click-didyoumean==0.0.3
+click-repl==0.1.6
+cloudflare==2.7.1
+colorama==0.4.4
+coverage==5.3
 cryptography==2.9.2
-pyOpenSSL==19.1.0
-# cryptography==2.5
-simple-crypt==4.1.7
-pur==5.2.1
-Werkzeug==0.14.1
-#pprint==0.1
-names==0.3.0
-PyJWT==1.7.1
-# jwt==0.5.2
-# pycurl==7.43.0.5
-vine==1.3.0
-
-# APIs
-ShopifyAPI==8.0.4
-
-# Extensions.
-flask-debugtoolbar==0.10.1
-Flask-Mail==0.9.1
-Flask-Login==0.3.2
+decorator==4.4.2
+entrypoints==0.3
+Faker==2.0.1
+flake8==3.7.6
+Flask==1.0.2
+Flask-Assets==0.12
 Flask-Cache==0.13.1
 Flask-Caching==1.4.0
-# flask-table==0.5.0
-# babel==2.7.0
-# alembic==1.1.0
-# flask-migrate==2.5.3
-# pymysql==0.9.3
-# boto3==1.12.22
-# mysql-connector==2.2.9
-
-
-# Threading.
-# asyncio==3.4.3
-# aiohttp
-# asyncio_stripe
-# attrs
-# aiopg
-# websocket-client==0.53.0
-
-# Date
-# ago==0.0.93
-
-# kombu==4.4.0
-
-pytz~=2020.1
-SQLAlchemy~=1.3.8
-itsdangerous~=1.1.0
-python-dotenv~=0.14.0
-requests~=2.23.0
-WTForms~=1.0.5
-Faker~=2.0.1
-setuptools~=50.3.2
+Flask-Compress==1.4.0
+Flask-Cors==3.0.8
+Flask-DebugToolbar==0.10.1
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.2
+flask-paginate==0.5.2
+Flask-RQ==0.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-SSLify==0.1.5
+flask-talisman==0.7.0
+Flask-WTF==0.9.5
+future==0.18.2
+gunicorn==19.9.0
+helpers==0.2.0
+heroku3==4.2.1
+honcho==1.0.1
+idna==2.8
+importlib-metadata==2.0.0
+infinity==1.5
+intervals==0.9.0
+invoke==1.4.1
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsmin==2.2.2
+jsonlines==1.2.0
+jsonpickle==1.2
+kombu==4.6.11
+Mako==1.1.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mock==2.0.0
+more-itertools==8.5.0
+names==0.3.0
+packaging==19.1
+pbr==5.5.0
+pipupgrade==1.5.1
+pluggy==0.13.1
+prompt-toolkit==3.0.3
+psycopg2==2.7.7
+psycopg2-binary==2.8.2
+pur==5.2.1
+py==1.9.0
+pyactiveresource==2.2.1
+pycodestyle==2.5.0
+pycparser==2.20
+pyflakes==2.1.1
+PyJWT==1.7.1
+PyNaCl==1.4.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.2
+pytest==4.3.0
+pytest-cov==2.6.1
+python-dateutil==2.8.0
+python-dotenv==0.14.0
+python-editor==1.0.4
+pytz==2020.1
+PyYAML==5.3.1
+rabbitmq==0.2.0
+raygun4py==4.3.0
+redis==3.2.0
+requests==2.23.0
+rq==1.1.0
+ShopifyAPI==8.0.4
+six==1.15.0
+SQLAlchemy==1.3.8
+SQLAlchemy-Utils==0.36.8
+stripe==2.42.0
+text-unidecode==1.2
+tzlocal==1.5.1
+urllib3==1.25.3
+utils==1.0.1
+validators==0.18.1
+vine==1.3.0
+wcwidth==0.2.5
+webassets==0.12.1
+Werkzeug==0.14.1
+WTForms==1.0.5
+WTForms-Alchemy==0.16.8
+WTForms-Components==0.10.3
+zipp==3.3.1
